# copy_cat

./: .gitignore  README.md  copy-cat-product-spec.md  pyproject.toml
docs/: architecture.md  product-spec.md  research-notes.md  roadmap.md  testing-strategy.md
src/copycat/: app.py
src/copycat/controller/: __init__.py  main_controller.py
src/copycat/domain/: __init__.py  models.py
src/copycat/parsing/: __init__.py  parser.py
src/copycat/protocols/: __init__.py  audio.py  parser.py  source.py  speech.py  transformer.py
src/copycat/services/: __init__.py  edge_tts_provider.py  ollama_transformer.py  prefetch_queue.py  qt_audio_output.py  settings_service.py  speech_normalizer.py
src/copycat/sources/: __init__.py  clipboard.py
src/copycat/speech/: __init__.py  planner.py
src/copycat/ui/: __init__.py  main_window.py
tests/: conftest.py
tests/fixtures/: antigravity_response.md  chatgpt_response.md  malformed_markdown.md  nested_bullet_lists.md  unclosed_code_fences.md
tests/mocks/: __init__.py  mock_audio_output.py  mock_ollama.py  mock_speech_provider.py
tests/ui/: test_main_window.py
tests/unit/: test_clipboard_source.py  test_domain_models.py  test_edge_tts_provider.py  test_main_controller.py  test_markdown_parser.py  test_ollama_transformer.py  test_prefetch_queue.py  test_qt_audio_output.py  test_reading_session.py  test_settings_service.py  test_speech_normalizer.py  test_speech_planner.py
